# index_tac

./: .env.sample  .gitignore  QUICKSTART.md  README.md  README_MAX_BRANCH.md
.claude/commands/: classify_adw.md
adws/: adw_chore_implement.py
adws/adw_config/: event_taxonomy.yaml
adws/adw_modules/: agent.py  event_manager.py  github.py  utils.py  workflow_ops.py
adws/adw_tests/: health_check.py
adws/adw_triggers/: trigger_webhook.py
apps/sentiment_classification/: README.md  main.py  pyproject.toml
apps/sentiment_classification/data/: tweets_v1.csv
apps/sentiment_classification/notebooks/: 01_sentiment_classification_example.ipynb
scripts/: start_dev.sh  start_webhook.sh
specs/: IMPLEMENTATION_PLAN.md
tests/: test_claude_max.py
